refactor WorkingTime workday to return ZERO instead of Optional